add title and desc to sample notebook

--- a/{{cookiecutter.temp_directory}}/sample_notebook.ipynb
+++ b/{{cookiecutter.temp_directory}}/sample_notebook.ipynb
@@ -204,6 +204,8 @@
   }
  ],
  "metadata": {
+  "title": "This is a sample notebook",
+  "description": "This notebook explores a fictional sample of pet ownership.",
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
